API適用、エクスポート修正
