# docs/openapi/TEST.yml
@@ -104,6 +104,8 @@ components:
       properties:
         projectName:
           type: string
+        autoProductivity:
+          type: boolean
         productivityFPPerMonth:
           type: number
         projectType:
@@ -141,6 +143,9 @@ components:
               type: number
             systemTest:
               type: number
+      # required:
+      #   - projectName
+      #   - productivityFPPerMonth
     CalcTestApplication200Response:
       description: 工数計算レスポンス
       type: object
@@ -220,6 +225,12 @@ components:
           type: string
         ipaValueType:
           type: string
+        totalFP:
+          type: number
+        totalManMonths:
+          type: number
+        standardDurationMonths:
+          type: number  
         importFile:
           type: object
           properties:
@@ -240,10 +251,6 @@ components:
               type: string
               format: byte
               description: ファイル内容
-        totalFP:
-          type: number
-        manMonth:
-          type: number
         dataFunctions:
           type: array
           items:
